# AI-Resume-Ranker

./: README.md
backend/: main.py  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.css  App.jsx
frontend/src/api/: api.js
